--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1355,3 +1355,625 @@ justify-content: center;
    transform: translateY(0%);
   }
  }
+
+ 
+
+
+
+
+
+
+ .cta {
+  position: relative;
+  margin: auto;
+  padding: 12px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+ }
+ 
+ .cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 50px;
+  background: #b1dae7;
+  width: 45px;
+  height: 45px;
+  transition: all 0.3s ease;
+ }
+ 
+ .cta span {
+  position: relative;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #234567;
+ }
+ 
+ .cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 10px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #234567;
+  stroke-width: 2;
+  transform: translateX(-5px);
+  transition: all 0.3s ease;
+ }
+ 
+ .cta:hover:before {
+  width: 100%;
+  background: #b1dae7;
+ }
+ 
+ .cta:hover svg {
+  transform: translateX(0);
+ }
+ 
+ .cta:active {
+  transform: scale(0.95);
+ }
+
+
+ 
+
+ /* === removing default button style ===*/
+.button {
+  margin: 0;
+  height: auto;
+  background: transparent;
+  padding: 0;
+  border: none;
+}
+
+/* button styling */
+.button {
+  --border-right: 5px;
+  --text-stroke-color: #0563bb;
+  --animation-color: #0563bb;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: 22px;
+  font-family: "Arial";
+  position: relative;
+  text-transform: lowercase;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--text-stroke-color);
+}
+/* this is the text, when you hover on button */
+.hover-text {
+  position: absolute;
+  box-sizing: border-box;
+  content: attr(data-text);
+  color: var(--animation-color);
+  width: 0%;
+  inset: 0;
+  border-right: var(--border-right) solid var(--animation-color);
+  overflow: hidden;
+  transition: 0.5s;
+  -webkit-text-stroke: 1px var(--animation-color);
+}
+/* hover */
+.button:hover .hover-text {
+  width: 100%;
+  filter: drop-shadow(0 0 23px var(--animation-color))
+}
+
+
+
+
+
+
+
+body{ 
+  background: white;
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container1 {
+  width:100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.book {
+  width: 113px;
+  height: 175px;
+  position:relative;
+  text-align: center;
+  margin:2.5%;
+}
+
+.book-cover {
+  position: absolute;
+  z-index:1;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0 50%;
+  -webkit-transform-origin: 0 50%;
+  background: #111;
+  background-size:cover;
+  border-radius: 3px;
+  box-shadow: 
+    inset 4px 1px 3px #ffffff60,
+    inset 0 -1px 2px #00000000;
+  transition: all .5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+}
+
+.cover1 {
+  background: url('https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/81-QB7nDh4L.jpg');
+}
+
+.cover2 {
+  background: url('https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/71UhHVazgeL.jpg');
+}
+
+.cover3 {
+  background: url('https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/81xBzG4riDL.jpg');
+}
+
+.cover4 {
+  background: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1440528321i/36071.jpg');
+}
+
+.cover5 {
+  background: url('https://cdn2.penguin.com.au/covers/original/9781407064291.jpg');
+}
+
+.cover6 {
+  background: url('https://m.media-amazon.com/images/I/81EmFfHo9CL.jpg');
+}
+
+.cover7 {
+  background: url('https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/51GGtAgs-7L._SX313_BO1,204,203,200_.jpg');
+}
+
+.cover8 {
+  background: url('https://blog.12min.com/wp-content/uploads/2017/03/sdasdsad-768x768.jpg');
+}
+
+.book .book-cover {
+  background-size: 100% 100%;
+}
+
+
+.effect {
+  width: 20px;
+  height: 100%;
+  margin-left: 10px;
+  border-left: 2px solid #00000010;
+  background-image: linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 100%);
+  transition: all .5s ease;
+}
+
+.light {
+  width: 90%;
+  height: 100%;
+  position: absolute;
+  border-radius: 3px; 
+  background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.2) 100%);
+  top: 0;
+  right:0;
+  opacity: .1;
+  transition: all .5s ease;
+  -webkit-transition: all .5s ease;
+}
+
+.book:hover { cursor:pointer; }
+
+.book:hover .book-cover {
+  transform: perspective(2000px) rotateY(-30deg);
+  -webkit-transform: perspective(2000px) rotateY(-30deg);
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  box-shadow: 
+    inset 4px 1px 3px #ffffff60,
+    inset 0 -1px 2px #00000080,
+    10px 0px 10px -5px #00000030
+}
+
+.book:hover .effect {
+  width: 40px;
+ /** margin-left:13px;
+  opacity: 0.5; **/
+}
+
+.book:hover .light {
+  opacity: 1;
+  width: 70%;
+}
+
+.book-inside{
+  width: calc(100% - 2px);
+  height:96%;
+  position:relative;
+  top: 2%;
+  border: 1px solid grey;
+  border-radius:3px;
+  background: white;
+  box-shadow: 
+  10px 40px 40px -10px #00000030,
+  inset -2px 0 0 grey,
+  inset -3px 0 0 #dbdbdb,
+  inset -4px 0 0 white,
+  inset -5px 0 0 #dbdbdb,
+  inset -6px 0 0 white,
+  inset -7px 0 0 #dbdbdb,
+  inset -8px 0 0 white,
+  inset -9px 0 0 #dbdbdb;
+}
+
+.title {
+  font-size:22px;
+  width: 100%;
+  color: #333;
+  text-align: center;
+  position: absolute;
+  top:-30px;
+  height: 1px;
+  display: flex;
+  align-items: flex-end;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+}
+
+.title p {
+  width: 100%;
+  margin:0;
+  line-height:1.3;
+}
+
+
+.btn {
+  position:relative;
+  background: #aaa;
+  color: #fff;
+  font-weight: bold;
+  padding: 15px 30px;
+  font-size: 15px;
+  letter-spacing:1px;
+  border-radius: 50px;
+  bottom: -50px;
+  display: inline-block;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+}
+
+.book:hover .btn, .book:hover .title {
+  opacity: 1;
+}
+
+
+
+
+
+*{
+  margin:0;
+  padding: 0;
+
+}
+a{
+	text-decoration: none;
+	color: #000;
+}
+li {
+    list-style: none;
+}
+html{
+	height: 100%;
+}
+body{
+	width: 100%;
+	height: 100%;
+}
+.clearfix{
+	clear: both;
+}
+.containar {
+  /*display: flex;*/
+  background: #caedfd;
+}
+.slider {
+
+    background: #ffffff00;
+    position: relative;
+
+}
+.slider-img {
+    width: 600px;
+    height: 600px;
+    margin: 0 auto;
+    padding: 30px 0;
+    text-align: center;
+}
+#ul-parent {
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    /*transform-origin: 40% 0;*/
+
+}
+#ul-parent li{
+	position: absolute;
+	width: 100%;
+	animation-name: slider;
+	animation-duration: 20s;
+	animation-iteration-count: infinite; 
+}
+#ul-parent li:nth-child(1){
+	transform: translateX(0);
+	animation-delay: -20s;
+}
+#ul-parent li:nth-child(2){
+	transform: translateX(550px) translateZ(-300px) rotateY(30deg);
+	animation-delay: -15S;
+}
+#ul-parent li:nth-child(3){
+	transform:translateZ(-500px);
+	animation-delay: -10S;
+}
+#ul-parent li:nth-child(4){
+	transform: translateX(-550px) translateZ(-300px) rotateY(-30deg);
+	animation-delay: -5S;
+}
+@keyframes slider{
+	0%,20%{
+		transform: translateX(0);
+	}
+	25%,45%{
+		transform: translateX(550px) translateZ(-300px) rotateY(30deg);
+	}
+	50%,70%{
+		transform: translateZ(-500px)
+	}
+	75%,95%{
+		transform: translateX(-550px) translateZ(-300px) rotateY(-30deg);
+	}
+	97%{
+		transform: translateX(-550px) translateZ(-300px) rotateY(-30deg) translateX(-400);	
+	}
+	100%{
+		transform: translateX(0);
+
+	}
+}
+
+
+
+.container5{
+  width: 1000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container5 .card5{
+  position: relative;
+  cursor: pointer;
+}
+
+.container5 .card5 .face{
+  width: 310px;
+  height: 210px;
+  transition: 0.5s;
+}
+
+.container5 .card5 .face.face1{
+  position: relative;
+  background: #0563bb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.container5 .card5:hover .face.face1{
+  background: #0563bb;
+  transform: translateY(0);
+}
+
+.container5 .card5 .face.face1 .content{
+  opacity: 0.8;
+  transition: 0.5s;
+}
+
+.container5 .card5:hover .face.face1 .content{
+  opacity: 1;
+}
+
+.container5 .card5 .face.face1 .content img{
+  max-width: 100px;
+}
+
+.container5 .card5 .face.face1 .content h3{
+  margin: 10px 0 0;
+  padding: 0;
+  color: #ffffff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container5 .card5 .face.face2{
+  position: relative;
+  background: #e6e9ec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(15, 60, 209, 0.603);
+  transform: translateY(-111px);
+}
+
+.container5 .card5:hover .face.face2{
+  transform: translateY(0);
+}
+
+.container5 .card5 .face.face2 .content p{
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.container5 .card5 .face.face2 .content a:hover{
+  background: #333;
+  color: #ffffff;
+}
+
+
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+ 
+/* Assigning all the same properties to the body */
+
+
+
+.containerf{
+  width: 20em;
+  background-color: rgb(255, 255, 255);
+  overflow: hidden;
+  border-radius: 1em;
+  text-align: center;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1em;
+}
+
+.user-imagef{
+  padding: 3em 0;
+  background-image: linear-gradient(70deg,#61A1DD,#0083FD);
+}
+
+.user-imagef img{
+  width: 7em;
+  height: 7em;
+  border-radius: 50%;
+  box-shadow:  0 0.6em 1.8em ;
+  object-fit: cover;
+}
+
+.contentf{
+  color: #565656;
+  padding: 2.2em;
+}
+
+.namef{
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+
+.usernamef{
+  font-size: 1em;
+  color: #9e9e9e;
+}
+
+.linksf{
+  display: flex;
+  justify-content: center;
+  margin: 1.5em 0;
+}
+
+a{
+  text-decoration: none;
+  color: #565656;
+  transition: all 0.3s;
+  font-size: 2em;
+  margin-right: 1.2em;
+}
+
+a:last-child{
+  margin: 0;
+}
+
+.insta:hover{
+  color:rgb(255, 70, 101);
+  transform: scale(2,2);
+}
+
+.git:hover{
+  color:rgb(0, 0, 0);
+  transform: scale(2,2);
+}
+
+.linkedin:hover{
+  color:rgba(4, 0, 253, 0.842);
+  transform: scale(2,2);
+}
+
+.facebook:hover{
+  color:rgb(4, 0, 255);
+  transform: scale(2,2);
+}
+
+.details{
+  margin-bottom: 1.8em;
+}
+
+
+/* CSS for messagin link */
+
+.effectf {
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: rgb(48, 41, 41);
+  text-transform: capitalize;
+  width: 100%;
+  background-image: linear-gradient(60deg,#0083FD,#61A1DD);
+  font-size: 1.2em;
+  padding: 1em 3em;
+  border-radius: 5em;
+  overflow: hidden;
+}
+ 
+.effectf.effect-4:before {
+  content: "\f2b6";
+  font-family: FontAwesome;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 1.8em;
+  transform: scale(0, 1);
+}
+.effectf.effect-4:hover {
+  text-indent: -9999px;
+}
+   
+.effectf.effect-4:hover:before {
+transform: scale(1, 1);
+text-indent: 0;
+}
