--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1977,3 +1977,35 @@ a:last-child{
 transform: scale(1, 1);
 text-indent: 0;
 }
+
+
+.customButtoni { 
+  border:0px solid #FFFFFF;
+  border-radius:20px;
+  padding:10px;
+   margin:10px;
+  background-color:#0563bbd3;
+  color:#FFFFFF;
+  font-weight:normal;
+  opacity:2;
+  transition:1s;
+  } 
+  .customButtoni:hover {
+  cursor:pointer;
+  background-color:#D3D3D3;
+  opacity:2;
+  transition:1s;
+  color:#0563bb;
+  } 
+  
+  .customButtoniz { 
+    border:0px solid #FFFFFF;
+    border-radius:0px;
+    padding:0px;
+     margin:0px;
+    background-color:#ffffff00;
+    color:#FFFFFF;
+    font-weight:normal;
+    opacity:2;
+    transition:1s;
+    } 
